fix: adjust css to correctly use scroll for overflow on edit recipes page (#16)

--- a/src/app/components/sidebar/edit-recipes/edit-recipes.component.scss
+++ b/src/app/components/sidebar/edit-recipes/edit-recipes.component.scss
@@ -26,6 +26,7 @@
 .tableContainer {
   height: 85%;
   width: 90%;
+  overflow: auto;
 
   table {
     width: 100%;
